z-index fixes tooltip placement

--- a/components/tt-tooltips.styl
+++ b/components/tt-tooltips.styl
@@ -2,6 +2,7 @@
   display none
   position absolute
   box-shadow 1px 1px 2px #ccc
+  z-index 1000
 
 .tt-wrapper
   background-color #95a5a6
